--- a/css/sample.css
+++ b/css/sample.css
@@ -4,24 +4,51 @@ html {
   }
   body {
     text-align: center;
+    height: 100%;
   }
   .main-header {
-    padding-bottom: 15%;
+    height: 30vh;
     width: 100%;
     background-size: cover;
     background-image: url("../images/header.jpg");
     background-attachment: fixed;
+    display: table;
+   
+  }
+  .main-header p{
+    
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .main-header p img{
+    width: 13%;
   }
   /*  */
   header {
+    height: 50px;
+    background-color: #2B2B2B;
+    
   }
   header ul {
+    padding: 0;
+    margin: 0;
   }
   header ul a {
+    color: #fff;
+    text-decoration: none;
   }
   header li {
+    list-style: none;
+    float: left;
+    padding: 15px;
+  }
+  header li:nth-child(3),header li:nth-child(4){
+    float: right;
   }
   header ul:after {
+    content: '';
+    clear: both;
   }
   /*  */
   .main-header img {
