--- a/css/sample.css
+++ b/css/sample.css
@@ -1,95 +1,114 @@
 html {
-    position: relative;
-    min-height: 100%;
-  }
-*{
+  position: relative;
+  min-height: 100%;
+}
+
+* {
   box-sizing: border-box;
 }
-  body {
-    text-align: center;
-    height: 100%;
-  }
-  .main-header {
-    height: 30vh;
-    width: 100%;
-    background-size: cover;
-    background-image: url("../images/header.jpg");
-    background-attachment: fixed;
-    display: table;
-   
-  }
-  .main-header p{
-    
-    display: table-cell;
-    vertical-align: middle;
-  }
 
- /*  */
-  header {
-    height: 50px;
-    background-color: #2B2B2B;
-    
-  }
-  header ul {
-    padding: 0;
-    margin: 0;
-  }
-  header ul a {
-    color: #fff;
-    text-decoration: none;
-  }
-  header li {
-    list-style: none;
-    float: left;
-    padding: 15px;
-  }
-  header li:nth-child(3),header li:nth-child(4){
-    float: right;
-  }
-  header ul:after {
-    content: '';
-    clear: both;
-  }
-  /*  */
-  .main-header img {
-  /*  */
+body {
+  text-align: center;
+  height: 100%;
+}
+
+.main-header {
+  height: 30vh;
+  width: 100%;
+  background-size: cover;
+  background-image: url("../images/header.jpg");
+  background-attachment: fixed;
+  display: table;
+}
+
+.main-header p {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+/*  */
+
+header {
+  height: 50px;
+  background-color: #2B2B2B;
+}
+
+header ul {
+  padding: 0;
+  margin: 0;
+}
+
+header ul a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header li {
+  list-style: none;
+  float: left;
+  padding: 15px;
+}
+
+header li:nth-child(3), header li:nth-child(4) {
+  float: right;
+}
+
+header ul:after {
+  content: '';
+  clear: both;
+}
+
+
+.main-header img {
   width: 13%;
-  }
-  .about {
-  /* About  */
-  padding: 16px;
-    font-size: .8rem;
-  }
-  .about h1{
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  /*  */
-  .function {
-    background-color: #867d7d;
-    padding: 16px;
-    
-    
-  }
-  .function-images {
-    display: table;
-    width: 100%;
-    max-width: 600px;
-    margin: auto;
-    
-  }
-  .function-image {
-    float: left;
-    width: 150px;
-    padding: 16px;
-    font-size: .8rem;
-  }
+}
 
-  .function-image img{
-    max-width: 100%;
-    width: 60px;
-  }
-  /*  */
-  footer {
-  /*  */
-  }
+.about {
+  padding: 16px;
+  font-size: .8rem;
+}
+
+.about h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.function {
+  background-color: #867d7d;
+  padding: 16px;
+}
+
+.function-images {
+  display: table;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+}
+
+.function-image {
+  float: left;
+  width: 150px;
+  padding: 16px;
+  font-size: .8rem;
+}
+
+.function-image img {
+  max-width: 100%;
+  width: 60px;
+}
+
+
+footer {
+  background-color: #283A4B;
+  height: 70px;
+  font-size: .8rem;
+  display: table;
+  width: 100%;
+  color: #fff;
+}
+
+footer div {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 16px;
+}
